...
            "state" : "translated",
            "value" : "已取消"
          }
        }
      }
    },
    "Calendar" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日历"
...
            "state" : "translated",
            "value" : "日曆年份"
          }
        }
      }
    },
    "Cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
...
    "Dark" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "深色"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "深色"
          }
        }
      }
    },
    "Dashboard" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "概览"
...
            "state" : "translated",
            "value" : "檔案不可用"
          }
        }
      }
    },
    "Files" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "文件"
...
            "state" : "translated",
            "value" : "此檢視中的條目會顯示在這裡。"
          }
        }
      }
    },
    "Journal" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日记"
...
            "state" : "translated",
            "value" : "大綱"
          }
        }
      }
    },
    "Overdue" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "逾期"
...
            "state" : "translated",
            "value" : "已安排 · %@"
          }
        }
      }
    },
    "Search" : {
      "extractionState" : "manual",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
...
